--- a/style/style.css
+++ b/style/style.css
@@ -3,8 +3,19 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
+    z-index: 0;
+    outline: none;
+}
+body {
+    background: rgba(99, 240, 5, 0.582);
 }
 
+/* header */
+
+header {
+    background: white;
+}
 .header_top {
     height: 50px;
     background: rgb(99, 240, 5);
@@ -49,8 +60,14 @@
     color: white;
 }
 
+.header__bottom {
+    padding: 20px 0;
+}
+
+/* slider */
+
 .slider{
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     height: 500px;
     position: relative;
@@ -62,32 +79,160 @@
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    position: absolute;
-    left: 30px;
 }
 .slider__line{
     height: 100%;
 }
 button{
-    /* z-index: 99; */
+    z-index: 1;
     position: absolute;
     background: none;
     border: none;
     font-size: 50px;
-    opacity: 0;
+    opacity: 0.1;
     top: 50%;
     transition: 500ms;
 }
 button:hover {
-    opacity: 0.5;
+    opacity: 0.75;
     transition: 500ms;
 }
 .slider__prev {
-    right: 105%;
+    right: 95%;
 }
 .slider__next {
-    left: 105%;
+    left: 95%;
 }
-img {
+header img {
     height: 500px;
+}
+
+/* main */
+
+main {
+    margin-top: 50px;
+    /* padding: 50px; */
+    width: 100%;
+}
+.main__top {
+    width: 100%;
+    padding: 50px;
+}
+.main__news {
+    width: 100% !important;
+    height: 740px !important;
+    overflow: hidden;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main__sl {
+    display: flex;
+    justify-content: center;
+    width: 1250px;
+}
+.main__new {
+    padding: 20px;
+    width: 100%;
+    height: 700px !important;
+    border: 5px groove rgb(99, 240, 5);
+    border-radius: 10px;
+    background: white;
+    display: flex;
+    justify-content: center;
+}
+.new__photo {
+    width: 35%;
+    height: auto;
+}
+.head__news {
+    font-size: 40px;
+    font-family: 'Comic Sans MS';
+}
+.newblock {
+    font-size: 16px;
+    justify-content: space-around;
+    display: flex;
+    width: 100%;
+    height: 400px;
+    margin-top: 25px;
+    align-items: center;
+}
+.date {
+    font-family: 'Comic Sans MS';
+    font-size: 15px;
+}
+.newhead {
+    font-family: 'Comic Sans MS';
+    font-size: 30px;
+}
+.newtext {
+    width: 55%;
+    text-align: justify;
+}
+.newtext li {
+    font-family: 'Comic Sans MS';
+}
+.newtext li span {
+    font-weight: 900;
+}
+.newtext li a {
+    color: blue;
+}
+.main__prev {
+    right: 95%;
+}
+.main__next {
+    left: 95%;
+}
+
+/* main-bottom */
+
+.main__bottom {
+    display: flex;
+    background: white;
+    justify-content: space-around;
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: 'Comic Sans MS';
+    font-size: 25px;
+}
+.mbinform {
+    display: flex;
+    flex-direction: column;
+}
+
+.mbinform li {
+    padding: 50px;
+    padding-bottom: 25px;
+}
+.secoondomer {
+    display: flex;
+    border: 2px;
+    justify-content: space-between;
+    width: 500px;
+    padding: 50px;
+    padding-bottom: 25px;
+}
+.secblock1 {
+    width: 100px;
+    height: 100px;
+    background: rgba(99, 240, 5, 0.5);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: space-around;
+    font-size: 20px;
+    padding: 12.5px;
+}
+.secblock2 {
+    width: 75px;
+    height: 75px;
+    background: rgb(99, 240, 5);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
